--- a/inline.css
+++ b/inline.css
@@ -9,11 +9,12 @@ body {
 
 html {
     font-size: 100%;
-    font-family: sans-serif;
+    font-family: "Inter UI", sans-serif;
 }
 
 h1 {
     font-size: 8rem;
+    font-weight: normal;
 }
 
 .main-header {
@@ -40,7 +41,6 @@ h1 {
     z-index: 10;
     position: relative;
     box-shadow: 0px 10px 32px 0px rgba(0, 0, 0, 0.2);
-    animation: pulsate-bg 30s linear infinite;
 }
 
 @media (max-width: 1000px) {
