Started design for new course

--- a/base.scss
+++ b/base.scss
@@ -1,1 +1,10 @@
 @import "sass/normalize";
+
+@import "sass/variables";
+@import "sass/typography";
+
+@import "sass/header";
+@import "sass/container";
+@import "sass/footer";
+
+@import "sass/assignments";
