--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,4 +1,5 @@
 .footer {
     background: linear-gradient(45deg, $darkCharcoal, lighten($darkCharcoal, 10%));
-    padding: 2em;
+    padding: 2rem;
+    color: white;
 }
