--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -2,6 +2,9 @@ $minionYellow: #f0db4f;
 $darkCharcoal: #323330;
 $blueGem: #2915a3;
 $mediumRedViolet: #bd2b80;
+$spray: #68e7f2;
+$starship: #ccf845;
+$purple: #7d0db0;
 
 $mainFont: "Inter UI", sans-serif;
 $codeFont: monospace;
