--- a/sass/container.scss
+++ b/sass/container.scss
@@ -1,4 +1,5 @@
-.container {
+.container,
+.inner-footer {
     width: 100%;
     margin-top: 8em;
     padding: 1.4em 1em;
@@ -15,7 +16,8 @@
 }
 
 @media (min-width: 768px) {
-    .container {
+    .container,
+    .inner-footer {
         width: 740px;
         margin-left: auto;
         margin-right: auto;
@@ -28,7 +30,8 @@
 }
 
 @media (min-width: 992px) {
-    .container {
+    .container,
+    .inner-footer {
         width: 960px;
     }
 
@@ -44,7 +47,8 @@
 }
 
 @media (min-width: 1200px) {
-    .container {
+    .container,
+    .inner-footer {
         width: 1160px;
     }
 }
