--- a/sass/header.scss
+++ b/sass/header.scss
@@ -2,8 +2,9 @@
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 0.4em 1em;
+    padding: 1.4rem 1rem;
     background: linear-gradient(45deg, $minionYellow, lighten($minionYellow, 10%));
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
 .header a {
