Added test scripts and fixed validation errors

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -6,6 +6,8 @@ $spray: #68e7f2;
 $starship: #ccf845;
 $purple: #7d0db0;
 
+$shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
+
 $mainFont: "Inter UI", sans-serif;
 $codeFont: monospace;
 $mainFontColor: $darkCharcoal;
