--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 13em;
     margin-bottom: 2.8rem;
-    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: $shadow;
 }
 
 .assignment-box.project {
