--- a/sass/header.scss
+++ b/sass/header.scss
@@ -4,7 +4,7 @@
     width: 100%;
     padding: 1.4rem 1rem;
     background: linear-gradient(45deg, $minionYellow, lighten($minionYellow, 10%));
-    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: $shadow;
 }
 
 .header a {
