--- a/includes/index.html
+++ b/includes/index.html
@@ -1,23 +1,3 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>jsramverk</title>
-    <style>*{margin:0;padding:0;box-sizing:border-box}body{font-family:sans-serif}.header{position:fixed;top:0;width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0px rgba(0,0,0,.2)}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:8em;padding:1.4em 1em}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
-</style>
-    <link rel="stylesheet" href="inter-ui.css" media="none" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
-    <noscript>
-        <link rel="stylesheet" href="style.min.css">
-    </noscript>
-</head>
-<body>
-    <header class="header">
-        <h1><a href="/">jsramverk.me</a></h1>
-    </header>
-
-    <main class="container">
 <h2 class="main-title">Välkommen till jsramverk<h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för skapa användarvänliga webbplatser.</p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
@@ -30,7 +10,7 @@
         <div class="assignment-body">
             <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 
-            <p><a href="kmom01.html">Gå till uppgiften</a></p>
+            <p><a href="week1.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -94,12 +74,3 @@
         </div>
     </div>
 </div>
-    </main>
-
-    <footer class="footer">
-        <div class="inner-footer">
-            <p>&copy; Emil Folino</p>
-        </div>
-    </footer>
-</body>
-</html>
