Fixed compiler for assignments

--- a/includes/index.html
+++ b/includes/index.html
@@ -20,7 +20,7 @@
         <div class="assignment-body">
             <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="week2.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
