--- a/sass/header.scss
+++ b/sass/header.scss
@@ -5,6 +5,7 @@
     padding: 1.4rem 1rem;
     background: linear-gradient(45deg, $minionYellow, lighten($minionYellow, 10%));
     box-shadow: $shadow;
+    z-index: 1000;
 }
 
 .header a {
