--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -8,6 +8,16 @@ body {
     line-height: 1.4;
 }
 
+h1 {
+    font-size: 3rem;
+    margin-bottom: 1.4rem;
+}
+
+h2 {
+    font-size: 2.4rem;
+    margin-bottom: 1.4rem;
+}
+
 h3 {
     font-size: 2rem;
     margin-bottom: 1.4rem;
