Got toc and automatic scrolling working

--- a/includes/header.html
+++ b/includes/header.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>jsramverk</title>
     <style>{{inline-style}}</style>
-    <link rel="stylesheet" href="inter-ui.css" media="none" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
+    {{jsScripts}}
     <noscript>
         <link rel="stylesheet" href="style.min.css">
     </noscript>
