--- a/base.scss
+++ b/base.scss
@@ -1,11 +1,11 @@
 @import "sass/normalize";
 
 @import "sass/variables";
-@import "sass/typography";
 
 @import "sass/header";
+@import "sass/typography";
 @import "sass/container";
 @import "sass/footer";
 
 @import "sass/assignments";
-@import "sass/toc";
+@import "sass/toc.scss";
