added all weeks assignments and renamed pages

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -6,6 +6,10 @@
     z-index: 1000;
 }
 
+.header h1 {
+    margin-bottom: 0;
+}
+
 .header a {
     color: $darkCharcoal;
     text-decoration: none;
