--- a/includes/index.html
+++ b/includes/index.html
@@ -1,5 +1,5 @@
 <h2 class="main-title">Välkommen till jsramverk<h2>
-<p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för skapa användarvänliga webbplatser.</p>
+<p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <div class="assignments">
@@ -10,7 +10,7 @@
         <div class="assignment-body">
             <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 
-            <p><a href="week1.html">Gå till uppgiften</a></p>
+            <p><a href="frontend.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -20,7 +20,7 @@
         <div class="assignment-body">
             <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
 
-            <p><a href="week2.html">Gå till uppgiften</a></p>
+            <p><a href="ux.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -30,7 +30,7 @@
         <div class="assignment-body">
             <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="backend.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -40,7 +40,7 @@
         <div class="assignment-body">
             <p>Vi skapar en testmiljö för både frontend och backend kod, samt ett flöde för Continouos Integration.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="test.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -50,7 +50,7 @@
         <div class="assignment-body">
             <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="realtid.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -60,7 +60,7 @@
         <div class="assignment-body">
             <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="nosql.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
@@ -70,7 +70,7 @@
         <div class="assignment-body">
             <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
 
-            <p><a href="#">Gå till projektet</a></p>
+            <p><a href="project.html">Gå till projektet</a></p>
         </div>
     </div>
 </div>
