--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -6,7 +6,7 @@
 
 .assignment-box {
     width: 100%;
-    height: 13em;
+    height: 8em;
     margin-bottom: 2.8rem;
     box-shadow: $shadow;
 }
@@ -20,36 +20,8 @@
     padding: 0.6em;
 }
 
-.assignment-header h3 {
-    margin: 0;
-}
-
-.minion-yellow {
-    background: linear-gradient(45deg, $minionYellow, lighten($minionYellow, 10%));
-}
-
-.dark-charcoal {
-    background: linear-gradient(45deg, $darkCharcoal, lighten($darkCharcoal, 10%));
-    color: white;
-
-    ::selection,
-    ::-moz-selection {
-        background: $darkCharcoal;
-    }
-}
-
-.blue-gem {
-    background: linear-gradient(45deg, $blueGem, lighten($blueGem, 10%));
-    color: white;
-
-    ::selection,
-    ::-moz-selection {
-        background: $blueGem;
-    }
-}
-
-.medium-red-violet {
-    background: linear-gradient(45deg, $mediumRedViolet, lighten($mediumRedViolet, 10%));
+.assignment-header {
+    background: linear-gradient(45deg, $mediumRedViolet, lighten($mediumRedViolet, 20%));
     color: white;
 
     ::selection,
@@ -58,43 +30,83 @@
     }
 }
 
-.purple {
-    background: linear-gradient(45deg, $purple, lighten($purple, 10%));
-    color: white;
-
-    ::selection,
-    ::-moz-selection {
-        background: $purple;
-    }
+.assignment-header h3 {
+    margin: 0;
 }
 
-.spray {
-    background: linear-gradient(45deg, $spray, lighten($spray, 10%));
-
-    ::selection,
-    ::-moz-selection {
-        background: $spray;
-    }
-}
-
-.starship {
-    background: linear-gradient(45deg, $starship, lighten($starship, 10%));
-
-    ::selection,
-    ::-moz-selection {
-        background: $starship;
-    }
-}
+// .minion-yellow {
+//     background: linear-gradient(45deg, $minionYellow, lighten($minionYellow, 10%));
+// }
+//
+// .dark-charcoal {
+//     background: linear-gradient(45deg, $darkCharcoal, lighten($darkCharcoal, 10%));
+//     color: white;
+//
+//     ::selection,
+//     ::-moz-selection {
+//         background: $darkCharcoal;
+//     }
+// }
+//
+// .blue-gem {
+//     background: linear-gradient(45deg, $blueGem, lighten($blueGem, 10%));
+//     color: white;
+//
+//     ::selection,
+//     ::-moz-selection {
+//         background: $blueGem;
+//     }
+// }
+//
+// .medium-red-violet {
+//     background: linear-gradient(45deg, $mediumRedViolet, lighten($mediumRedViolet, 10%));
+//     color: white;
+//
+//     ::selection,
+//     ::-moz-selection {
+//         background: $mediumRedViolet;
+//     }
+// }
+//
+// .purple {
+//     background: linear-gradient(45deg, $purple, lighten($purple, 10%));
+//     color: white;
+//
+//     ::selection,
+//     ::-moz-selection {
+//         background: $purple;
+//     }
+// }
+//
+// .spray {
+//     background: linear-gradient(45deg, $spray, lighten($spray, 10%));
+//
+//     ::selection,
+//     ::-moz-selection {
+//         background: $spray;
+//     }
+// }
+//
+// .starship {
+//     background: linear-gradient(45deg, $starship, lighten($starship, 10%));
+//
+//     ::selection,
+//     ::-moz-selection {
+//         background: $starship;
+//     }
+// }
 
 @media (min-width: 768px) {
     .assignment-box {
         width: 46%;
         margin-bottom: 3.92rem;
+        height: 8em;
     }
 }
 
 @media (min-width: 992px) {
     .assignment-box {
         width: 30%;
+        height: 10em;
     }
 }
