Made the assignment boxes blue instead so complementary color scheme

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,10 +1,7 @@
 $minionYellow: #f0db4f;
 $darkCharcoal: #323330;
 $blueGem: #2915a3;
-$mediumRedViolet: #bd2b80;
-$spray: #68e7f2;
-$starship: #ccf845;
-$purple: #7d0db0;
+$royalBlue: #654ff0;
 
 $shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
 
