--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -23,6 +23,11 @@ h3 {
     margin-bottom: 1.4rem;
 }
 
+h4 {
+    font-size: 1.7rem;
+    margin-bottom: 1.4rem;
+}
+
 p {
     font-size: 1rem;
     margin-bottom: 1.4rem;
@@ -34,13 +39,15 @@ a {
 
 .week h1 a,
 .week h2 a,
-.week h3 a {
+.week h3 a,
+.week h4 a {
     color: $darkCharcoal;
     text-decoration: none;
 }
 
 .week h1 a:hover,
 .week h2 a:hover,
-.week h3 a:hover {
+.week h3 a:hover,
+.week h4 a:hover {
     text-decoration: underline;
 }
