Added anchor links to frontpage general information

--- a/includes/index.html
+++ b/includes/index.html
@@ -4,7 +4,7 @@
 
 <section class="assignments">
     <div class="assignment-box">
-        <div class="assignment-header dark-charcoal">
+        <div class="assignment-header">
             <h3>1: Frontend</h3>
         </div>
         <div class="assignment-body">
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="assignment-box">
-        <div class="assignment-header blue-gem">
+        <div class="assignment-header">
             <h3>2: UX</h3>
         </div>
         <div class="assignment-body">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="assignment-box">
-        <div class="assignment-header medium-red-violet">
+        <div class="assignment-header">
             <h3>3: Backend</h3>
         </div>
         <div class="assignment-body">
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="assignment-box">
-        <div class="assignment-header purple">
+        <div class="assignment-header">
             <h3>4: Test</h3>
         </div>
         <div class="assignment-body">
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="assignment-box">
-        <div class="assignment-header spray">
+        <div class="assignment-header">
             <h3>5: Realtid</h3>
         </div>
         <div class="assignment-body">
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="assignment-box">
-        <div class="assignment-header starship">
+        <div class="assignment-header">
             <h3>6: NoSQL</h3>
         </div>
         <div class="assignment-body">
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="assignment-box project">
-        <div class="assignment-header minion-yellow">
+        <div class="assignment-header">
             <h3>Projekt: Trading plattform</h3>
         </div>
         <div class="assignment-body">
@@ -75,47 +75,69 @@
     </div>
 </section>
 
-<section class="general-information">
-    <h2>Generell information</h2>
+<section class="general-information" id="general-information">
+    <h2>Generell information<a class="anchor" href="#general-information">&#128279;</a></h2>
 
-    <h4>Kursplan</h4>
-    <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612">DV1612</a> via BTH's webbplats.</p>
+    <section id="courseplan">
+        <h4>Kursplan
+            <a class="anchor" href="#courseplan">&#128279;</a>
+        </h4>
 
-    <h4>Studie- och lektionsplan</h4>
-    <p></p>
+        <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612">DV1612</a> via BTH's webbplats.</p>
+    </section>
 
-    <h4>Betygsättning</h4>
-    <p></p>
+    <section id="studyplan">
+        <h4>Studie- och lektionsplan
+            <a class="anchor" href="#studyplan">&#128279;</a>
+        </h4>
+        <p></p>
+    </section>
 
-    <h4>Ladok</h4>
-    <p>Enligt kursplanen finns det 3 Ladok-moment. Dessa är kopplade till inlämningsuppgifterna enligt nedan.</p>
+    <section id="grading">
+        <h4>Betygsättning
+            <a class="anchor" href="#grading">&#128279;</a>
+        </h4>
+        <p></p>
+    </section>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Kursens moment</th>
-                <th>Ladok moment enligt kursplan</th>
-                <th>Betyg</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Frontend &amp; UX</td>
-                <td>Inlämning 1 á 2.5hp</td>
-                <td>G-U</td>
-            </tr>
-            <tr>
-                <td>Backend &amp; Test</td>
-                <td>Inlämning 2 á 2.5hp</td>
-                <td>G-U</td>
-            </tr>
-            <tr>
-                <td>Realtid, NoSQL &amp; Projektet</td>
-                <td>Inlämning 3 á 2.5hp</td>
-                <td>A-F</td>
-            </tr>
-        </tbody>
-    </table>
+    <section id="ladok">
+        <h4>Ladok
+            <a class="anchor" href="#ladok">&#128279;</a>
+        </h4>
+        <p>Enligt kursplanen finns det 3 Ladok-moment. Dessa är kopplade till inlämningsuppgifterna enligt nedan.</p>
 
-    <h4>Kursvärdering</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>Kursens moment</th>
+                    <th>Ladok moment enligt kursplan</th>
+                    <th>Betyg</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Frontend &amp; UX</td>
+                    <td>Inlämning 1 á 2.5hp</td>
+                    <td>G-U</td>
+                </tr>
+                <tr>
+                    <td>Backend &amp; Test</td>
+                    <td>Inlämning 2 á 2.5hp</td>
+                    <td>G-U</td>
+                </tr>
+                <tr>
+                    <td>Realtid, NoSQL &amp; Projektet</td>
+                    <td>Inlämning 3 á 2.5hp</td>
+                    <td>A-F</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="evaluation">
+        <h4>Kursvärdering
+            <a class="anchor" href="#evaluation">&#128279;</a>
+        </h4>
+        <p></p>
+    </section>
 </section>
