--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -6,9 +6,11 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 100%;
 }
 
 body {
     font-family: sans-serif;
     font-display: auto;
+    line-height: 1.4;
 }
