--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -35,6 +35,10 @@
     margin: 0;
 }
 
+.general-information {
+    margin-bottom: 22.4rem;
+}
+
 @media (min-width: 768px) {
     .assignment-box {
         width: 46%;
