--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -39,6 +39,15 @@
     margin-bottom: 22.4rem;
 }
 
+.general-information a {
+    color: $darkCharcoal;
+    text-decoration: none;
+}
+
+.general-information a:hover {
+    text-decoration: underline;
+}
+
 @media (min-width: 768px) {
     .assignment-box {
         width: 46%;
