added information about grading and repo

--- a/includes/index.html
+++ b/includes/index.html
@@ -78,24 +78,25 @@
 <section class="general-information" id="general-information">
     <h2><a href="#general-information">Generell information</a></h2>
 
-    <section id="courseplan">
-        <h4><a href="#courseplan">Kursplan</a></h4>
+    <section id="repo">
+        <h3><a href="#repo">Repo</a></h3>
 
-        <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612">DV1612</a> via BTH's webbplats.</p>
+        <p>Exempelprogrammen som används i kursen finns i repot <a href="https://github.com/emilfolino/jsramverk" target="_blank">emilfolino/jsramverk</a>.</p>
+    </section>
+
+    <section id="courseplan">
+        <h3><a href="#courseplan">Kursplan</a></h3>
+
+        <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612" target="_blank">DV1612</a> via BTH's webbplats.</p>
     </section>
 
     <section id="studyplan">
-        <h4><a href="#studyplan">Studie- och lektionsplan</a></h4>
-        <p></p>
-    </section>
-
-    <section id="grading">
-        <h4><a href="#grading">Betygsättning</a></h4>
+        <h3><a href="#studyplan">Studie- och lektionsplan</a></h3>
         <p></p>
     </section>
 
     <section id="ladok">
-        <h4><a href="#ladok">Ladok</a></h4>
+        <h3><a href="#ladok">Ladok och betygsättning</a></h3>
         <p>Enligt kursplanen finns det 3 Ladok-moment. Dessa är kopplade till inlämningsuppgifterna enligt nedan.</p>
 
         <table>
@@ -104,6 +105,7 @@
                     <th>Kursens moment</th>
                     <th>Ladok moment enligt kursplan</th>
                     <th>Betyg</th>
+                    <th>Poäng</th>
                 </tr>
             </thead>
             <tbody>
@@ -111,23 +113,64 @@
                     <td>Frontend &amp; UX</td>
                     <td>Inlämning 1 á 2.5hp</td>
                     <td>G-U</td>
+                    <td>20</td>
                 </tr>
                 <tr>
                     <td>Backend &amp; Test</td>
                     <td>Inlämning 2 á 2.5hp</td>
                     <td>G-U</td>
+                    <td>20</td>
                 </tr>
                 <tr>
                     <td>Realtid, NoSQL &amp; Projektet</td>
                     <td>Inlämning 3 á 2.5hp</td>
                     <td>A-F</td>
+                    <td>20-60</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Slutgiltigt betyg</h4>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Poäng</th>
+                    <th>Betyg</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>60</td>
+                    <td>E</td>
+                </tr>
+                <tr>
+                    <td>70</td>
+                    <td>D</td>
+                </tr>
+                <tr>
+                    <td>80</td>
+                    <td>C</td>
+                </tr>
+                <tr>
+                    <td>90</td>
+                    <td>B</td>
+                </tr>
+                <tr>
+                    <td>100</td>
+                    <td>A</td>
                 </tr>
             </tbody>
         </table>
     </section>
 
     <section id="evaluation">
-        <h4><a href="#evaluation">Kursvärdering</a></h4>
-        <p></p>
+        <h3><a href="#evaluation">Kursvärdering</a></h3>
+        <p>Kursvärdering är ett viktigt verktyg för återkoppling och utvärdering
+            av kurser både för Blekinge Tekniska Högskola men främst för
+            kursorganisationen och kursansvarige. I slutet av kursen skickas 
+        
+        
+        </p>
     </section>
 </section>
