Updated information about courseeval

--- a/includes/index.html
+++ b/includes/index.html
@@ -168,9 +168,9 @@
         <h3><a href="#evaluation">Kursvärdering</a></h3>
         <p>Kursvärdering är ett viktigt verktyg för återkoppling och utvärdering
             av kurser både för Blekinge Tekniska Högskola men främst för
-            kursorganisationen och kursansvarige. I slutet av kursen skickas 
-        
-        
+            kursorganisationen och kursansvarige. I slutet av kursen skickas kursvärderingen
+            ut via Canvas och mail. Jag är som kursansvarig oerhört tacksam om du vill ta 3-5 minuter
+            att svara på kursvärderingen.
         </p>
     </section>
 </section>
