--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -2,4 +2,8 @@
     background: linear-gradient(45deg, $darkCharcoal, lighten($darkCharcoal, 10%));
     padding: 2rem;
     color: white;
+
+    a {
+        color: white;
+    }
 }
