Added turbolinks, will see if I keep it

--- a/includes/header.html
+++ b/includes/header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
     {{cssFiles}}
-    {{jsScripts}}
+    <script src="bundle.js" defer></script>
     <noscript>
         <link rel="stylesheet" href="style.min.css">
     </noscript>
