Tried to fix css for menu

--- a/sass/container.scss
+++ b/sass/container.scss
@@ -66,6 +66,7 @@
         text-align: right;
         position: fixed;
         top: 14.5rem;
+        margin-bottom: 400px;
     }
 
     .toc ul {
