Added meta tags to header

--- a/includes/header.html
+++ b/includes/header.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Emil Folino">
+    <meta name="description" content="Kursplats för kursen DV1612 JavaScript-baserade webbramverk också kallad jsramverk vid Blekinge Tekniska Högskola">
+    <meta name="keywords" content="JavaScript,javascript,ramverk,framework,BTH,webbprogrammering">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>jsramverk</title>
     <style>{{inline-style}}</style>
