--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -23,11 +23,19 @@
 
 .assignment-header {
     background: linear-gradient(45deg, $blueGem, lighten($blueGem, 20%));
-    color: white;
 
     ::selection,
     ::-moz-selection {
         background: $blueGem;
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
     }
 }
 
