Added content about testing and docker article, adjusted and streamlined sass files

--- a/sass/container.scss
+++ b/sass/container.scss
@@ -52,12 +52,41 @@
 
     .main-title {
         font-size: 4rem;
-        margin-bottom: 1.96rem;
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
+    }
+
+    h1 {
+        font-size: $mainH1FontSize * $fontScaleFactor;
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
+    }
+
+    h2 {
+        font-size: $mainH2FontSize * $fontScaleFactor;
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
+    }
+
+    h3 {
+        font-size: $mainH3FontSize * $fontScaleFactor;
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
+    }
+
+    h4 {
+        font-size: $mainH4FontSize * $fontScaleFactor;
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
     }
 
     p {
-        font-size: 1.4rem;
-        margin-bottom: 1.96rem;
+        font-size: $mainPFontSize * $fontScaleFactor;
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
+    }
+
+    blockquote {
+        margin-bottom: $mainLineHeight * $mainPFontSize * $fontScaleFactor;
+    }
+
+    blockquote p {
+        font-size: $mainPFontSize * $fontScaleFactor * $fontScaleFactor;
+        margin-bottom: 0;
     }
 
     .toc {
