--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -9,3 +9,11 @@ $mainFont: "Inter UI", sans-serif;
 $codeFont: monospace;
 $mainFontColor: $darkCharcoal;
 $alternateFontColor: white;
+
+$mainPFontSize: 1rem;
+$mainH1FontSize: 3rem;
+$mainH2FontSize: 2.4rem;
+$mainH3FontSize: 2rem;
+$mainH4FontSize: 1.7rem;
+$fontScaleFactor: 1.4;
+$mainLineHeight: 1.4;
