Added lang attribute and overscroll effectt

--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -1,3 +1,11 @@
+html {
+    background-color: $minionYellow;
+}
+
+body {
+    background-color: white;
+}
+
 .assignments {
     display: flex;
     justify-content: space-between;
