added information about example programs

--- a/includes/index.html
+++ b/includes/index.html
@@ -79,9 +79,9 @@
     <h2><a href="#general-information">Generell information</a></h2>
 
     <section id="repo">
-        <h3><a href="#repo">Repo</a></h3>
+        <h3><a href="#repo">Exempelprogram</a></h3>
 
-        <p>Exempelprogrammen som används i kursen finns i repot <a href="https://github.com/emilfolino/jsramverk" target="_blank">emilfolino/jsramverk</a>.</p>
+        <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a href="https://github.com/emilfolino/jsramverk" target="_blank">emilfolino/jsramverk</a>.</p>
     </section>
 
     <section id="courseplan">
