--- a/includes/index.html
+++ b/includes/index.html
@@ -92,7 +92,8 @@
 
     <section id="studyplan">
         <h3><a href="#studyplan">Studie- och lektionsplan</a></h3>
-        <p></p>
+        <p>Schema för kursen finns via [schema.bth.se](https://cloud.timeedit.net/bth/web/sched1/ri1w7X7Q47ZZ9YQm5Q0291Y7yQY.html).</p>
+        <p>[Studieplan]() och [Lektionsplan]().</p>
     </section>
 
     <section id="ladok">
