--- a/sass/code.scss
+++ b/sass/code.scss
@@ -7,7 +7,7 @@ code {
     font-size: 1rem;
     color: #abb2bf;
     background: #282c34;
-    padding: 0 0.6rem;
+    padding: 0.2rem 0.6rem;
 }
 
 @media (min-width: 992px) {
