Fixed nicer links

--- a/includes/index.html
+++ b/includes/index.html
@@ -1,76 +1,77 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
+<p>Kursen ges till webbprogrammeringsstudenter vid <a href="https://bth.se" target="_blank"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Materialet på denna sida är licensierad under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License ocg källkoden till denna webbplats finns på <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="frontend.html">1: Frontend</a></h3>
+            <h3><a href="frontend">1: Frontend</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 
-            <p><a href="frontend.html">Gå till uppgiften</a></p>
+            <p><a href="frontend">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="ux.html">2: UX</a></h3>
+            <h3><a href="ux">2: UX</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
 
-            <p><a href="ux.html">Gå till uppgiften</a></p>
+            <p><a href="ux">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="backend.html">3: Backend</a></h3>
+            <h3><a href="backend">3: Backend</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
 
-            <p><a href="backend.html">Gå till uppgiften</a></p>
+            <p><a href="backend">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="test.html">4: Test</a></h3>
+            <h3><a href="test">4: Test</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skapar en testmiljö för våra repon, samt ett flöde för Continouos Integration.</p>
 
-            <p><a href="test.html">Gå till uppgiften</a></p>
+            <p><a href="test">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="realtid.html">5: Realtid</a></h3>
+            <h3><a href="realtid">5: Realtid</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
 
-            <p><a href="realtid.html">Gå till uppgiften</a></p>
+            <p><a href="realtid">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="nosql.html">6: NoSQL</a></h3>
+            <h3><a href="nosql">6: NoSQL</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 
-            <p><a href="nosql.html">Gå till uppgiften</a></p>
+            <p><a href="nosql">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
         <div class="assignment-header">
-            <h3><a href="project.html">Projekt: Trading plattform</a></h3>
+            <h3><a href="project">Projekt: Trading plattform</a></h3>
         </div>
         <div class="assignment-body">
             <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
 
-            <p><a href="project.html">Gå till projektet</a></p>
+            <p><a href="project">Gå till projektet</a></p>
         </div>
     </div>
 </section>
