--- a/includes/index.html
+++ b/includes/index.html
@@ -1,6 +1,6 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
-<p>Kursen ges till webbprogrammeringsstudenter vid <a href="https://bth.se" target="_blank"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Materialet på denna sida är licensierad under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License ocg källkoden till denna webbplats finns på <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
+<p>Kursen ges till webbprogrammeringsstudenter vid <a href="https://bth.se" target="_blank"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Materialet på denna sida är licensierad under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License och källkoden till denna webbplats finns på <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
