Fixed 4 times 100 in lighthouse

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,9 +2,9 @@
 
     <footer class="footer" id="footer">
         <div class="inner-footer">
-            <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
+            <p>&copy; <a href="https://emilfolino.se" target="_blank" rel="noopener">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
-            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
+            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.me" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.me</a></p>
         </div>
     </footer>
 </body>
