--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -5,7 +5,7 @@ $royalBlue: #654ff0;
 
 $shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
 
-$mainFont: "Inter UI", sans-serif;
+$mainFont: "Inter", sans-serif;
 $codeFont: monospace;
 $mainFontColor: $darkCharcoal;
 $alternateFontColor: white;
