--- a/base.scss
+++ b/base.scss
@@ -1,12 +1,7 @@
-@import "sass/normalize";
-
 @import "sass/variables";
-
-@import "sass/header";
+@import "inter-ui/inter.scss";
 @import "sass/typography";
-@import "sass/container";
 @import "sass/footer";
-
 @import "sass/assignments";
 @import "sass/toc";
 @import "sass/embeds";
