--- a/includes/index.html
+++ b/includes/index.html
@@ -1,103 +1,103 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
-<p>Kursen ges till webbprogrammeringsstudenter vid <a href="https://bth.se" target="_blank"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Materialet på denna sida är licensierad under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License och källkoden till denna webbplats finns på <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
+<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Materialet på denna sida är licensierad under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License och källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="frontend">1: Frontend</a></h3>
+            <h3><a aria-label="Vecka 1: Frontend" href="frontend">1: Frontend</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 
-            <p><a href="frontend">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 1: Frontend" href="frontend">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="ux">2: UX</a></h3>
+            <h3><a aria-label="Vecka 2: UX" href="ux">2: UX</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
 
-            <p><a href="ux">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 2: UX" href="ux">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="backend">3: Backend</a></h3>
+            <h3><a aria-label="Vecka 3: Backend" href="backend">3: Backend</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
 
-            <p><a href="backend">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 3: Backend" href="backend">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="test">4: Test</a></h3>
+            <h3><a aria-label="Vecka 4: Test" href="test">4: Test</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skapar en testmiljö för våra repon, samt ett flöde för Continouos Integration.</p>
 
-            <p><a href="test">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 4: Test" href="test">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="realtid">5: Realtid</a></h3>
+            <h3><a aria-label="Vecka 5: Realtid" href="realtid">5: Realtid</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
 
-            <p><a href="realtid">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 5: Realtid" href="realtid">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a href="nosql">6: NoSQL</a></h3>
+            <h3><a aria-label="Vecka 6: Nosql" href="nosql">6: NoSQL</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 
-            <p><a href="nosql">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 6: Nosql" href="nosql">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
         <div class="assignment-header">
-            <h3><a href="project">Projekt: Trading plattform</a></h3>
+            <h3><a aria-label="Projekt" href="project">Projekt: Trading plattform</a></h3>
         </div>
         <div class="assignment-body">
             <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
 
-            <p><a href="project">Gå till projektet</a></p>
+            <p><a aria-label="Projekt" href="project">Gå till projektet</a></p>
         </div>
     </div>
 </section>
 
 <section class="general-information" id="general-information">
-    <h2><a href="#general-information">Generell information</a></h2>
+    <h2><a aria-label="Generell information" href="#general-information">Generell information</a></h2>
 
     <section id="repo">
-        <h3><a href="#repo">Exempelprogram</a></h3>
+        <h3><a aria-label="Exempelprogram" href="#repo">Exempelprogram</a></h3>
 
-        <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a href="https://github.com/emilfolino/jsramverk" target="_blank">emilfolino/jsramverk</a>.</p>
+        <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a>.</p>
     </section>
 
     <section id="courseplan">
-        <h3><a href="#courseplan">Kursplan</a></h3>
+        <h3><a aria-label="Kursplan" href="#courseplan">Kursplan</a></h3>
 
-        <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612" target="_blank">DV1612</a> via BTH's webbplats.</p>
+        <p>Kursplanen hittas genom att söka på <a aria-label="" href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612" target="_blank" rel="noopener">DV1612</a> via BTH's webbplats.</p>
     </section>
 
     <section id="schema">
-        <h3><a href="#schema">Schema</a></h3>
-        <p>Schema för kursen finns via <a href="https://cloud.timeedit.net/bth/web/sched1/ri10745QX76Z54Q5Z16g2740y0096Y7Y409gQY5Q5.html">schema.bth.se</a>.</p>
+        <h3><a aria-label="Schema" href="#schema">Schema</a></h3>
+        <p>Schema för kursen finns via <a aria-label="" href="https://cloud.timeedit.net/bth/web/sched1/ri10745QX76Z54Q5Z16g2740y0096Y7Y409gQY5Q5.html" target="_blank" rel="noopener">schema.bth.se</a>.</p>
     </section>
 
     <section id="ladok">
-        <h3><a href="#ladok">Ladok och betygsättning</a></h3>
+        <h3><a aria-label="Ladok" href="#ladok">Ladok och betygsättning</a></h3>
         <p>Enligt kursplanen finns det 3 Ladok-moment. Dessa är kopplade till inlämningsuppgifterna enligt nedan.</p>
 
         <table>
@@ -166,7 +166,7 @@
     </section>
 
     <section id="evaluation">
-        <h3><a href="#evaluation">Kursvärdering</a></h3>
+        <h3><a aria-label="Kursvärdering" href="#evaluation">Kursvärdering</a></h3>
         <p>Kursvärdering är ett viktigt verktyg för återkoppling och utvärdering
             av kurser både för Blekinge Tekniska Högskola men främst för
             kursorganisationen och kursansvarige. I slutet av kursen skickas kursvärderingen
