Fixed type for al but Chrome

--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -15,6 +15,13 @@ body {
     font-display: auto;
 }
 
+h1,
+h2,
+h3,
+h4 {
+    font-weight: 700;
+}
+
 h1 {
     font-size: $mainH1FontSize;
     margin-bottom: $mainLineHeight * $mainPFontSize;
